<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">yourDualis</string>
    <string name="pdf">PDF</string>
    <string name="xls">XLS</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_logout">Logout</string>
    <string name="eintragen_">Eintragen:</string>
    <string name="dozent">Dozent</string>
    <string name="uhrzeit">Uhrzeit</string>
    <string name="vorlesungsname">Vorlesungsname</string>
    <string name="kalenderwoche">Kalenderwoche</string>
    <string name="semesterplan">Semesterplan</string>
    <string name="title_section1">Stundenplan</string>
    <string name="title_section2">Semesterplan</string>
    <string name="title_section3">Noten</string>
    <string name="title_section4">Mail</string>
    <string name="title_section5">Dozent</string>
    <string name="title_settings_section1">Synchronisation</string>
    <string name="title_settings_section2">Benachrichtigungen</string>
    <string name="title_settings_section3">Mail</string>
    <string name="app_settings">Einstellungen</string>
    <string name="app_login">Login</string>
    <string name="synchronisation">Synchronisation</string>
    <string name="sync_on">Die Synchronisation ist eingeschaltet</string>
    <string name="sync_off">Die Synchronisation ist ausgeschaltet</string>
    <string name="synchronisationsintervall">Synchronisationsintervall</string>
    <string name="gcal_sync_on">Die Synchronisation mit dem Google-Kalender ist eingeschaltet</string>
    <string name="gcal_sync_off">Die Synchronisation mit dem Google-Kalender ist ausgeschaltet</string>
    <string name="stupla_sync_on">Die Synchronisation des Stundenplans ist eingeschaltet</string>
    <string name="stupla_sync_off">Die Synchronisation des Stundenplans ist ausgeschaltet</string>
    <string name="noten_sync_on">Die Synchronisation der Noten ist eingeschaltet</string>
    <string name="noten_sync_off">Die Synchronisation der Noten ist ausgeschaltet</string>
    <string name="mail_sync_on">Die Mail-Synchronisation ist eingeschaltet</string>
    <string name="mail_sync_off">Die Mail-Synchronisation ist ausgeschaltet</string>
    <string name="google_kalender">Google-Kalender</string>
    <string name="noten">Noten</string>
    <string name="stupla">Stundenplan</string>
    <string name="mail">Mail</string>
    <string name="mailsynchronisationsintervall">Mailsynchronisationsintervall</string>
    <string name="netzwerkeinstellungen">Netzwerkeinstellungen</string>
    <string name="benachrichtigungen">Benachrichtigungen</string>
    <string name="notif_on">Benachrichtigungen sind eingeschaltet</string>
    <string name="notif_off">Benachrichtigungen sind ausgeschaltet</string>
    <string name="benachrichtigungsintervall">Benachrichtigungsintervall</string>
    <string name="sound_on">Ton ist eingeschaltet</string>
    <string name="sound_off">Ton ist ausgeschaltet</string>
    <string name="sound">Ton</string>
    <string name="vibration_on">Vibration ist eingeschaltet</string>
    <string name="vibration_off">Vibration ist ausgeschaltet</string>
    <string name="vibration">Vibration</string>
    <string name="montag">Montag</string>
    <string name="dienstag">Dienstag</string>
    <string name="mittwoch">Mittwoch</string>
    <string name="donnerstag">Donnerstag</string>
    <string name="freitag">Freitag</string>
    <string name="samstag">Samstag</string>
    <string name="standort">Standort</string>
    <string name="aktualisieren">Aktualisieren</string>
    <string name="app_close">Nochmal klicken um die App zu beenden&#8230;</string>
    <string name="name">Name</string>
    <string name="passwort">Passwort</string>
    <string name="logindaten_merken">Angemeldet bleiben</string>
    <string name="falsche_logindaten">Falsche Logindaten</string>
    <string name="login">Login</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="ok">Ok</string>
    <string name="semesterplan_export">Semesterplan-Export (PDF)</string>
    <string name="export_pdf">Export (PDF)</string>
    <string name="dhbw_logo">DHBW-Logo</string>

</resources>
