<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="android:attr/buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:id="@+id/linlay_kw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/stupla_kalenderwoche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kalenderwoche"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner_kalenderwoche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linlay_kw" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/stupla_table"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#000000" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/lay_montag"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay_dienstag"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:orientation="vertical" >
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/lay_mittwoch"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay_donnerstag"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:orientation="vertical" >
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/lay_freitag"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay_samstag"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:orientation="vertical" >
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp" >

        <Button
            android:id="@+id/update_stupla"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:onClick="updateStupla"
            android:text="@string/aktualisieren" />

        <Button
            android:id="@+id/export_pdf"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:onClick="exportSemesterplan"
            android:text="@string/export_pdf" />

    </LinearLayout>

</RelativeLayout>